--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@
 .emacs.d/init/*.*c
 .emacs.d/abbrev_defs
 .emacs.d/ac-comphist.dat
+
+.atom/blob-store
+.atom/compile-cache
+.atom/dev
+.atom/storage
+.atom/packages
+.atom/.node-gyp
+.atom/.apm
